[package]
name = "clip-otp"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
edition = "2018"

[features]
default = [ "with_x11" ]
with_x11 = [ "xcb" ]

[dependencies]
xcb = { git="https://github.com/vickenty/rust-xcb", optional=true, features = [ "res" ] }
anyhow = "1"
notify-rust = "4"
